# Haxmas-9

./: LICENSE  README.md  pyproject.toml
src/haxmas_day_9_angle_mad/: main.py
